third_party/move/move-compiler-v2/tests/checking/typing/assign_wrong_type.exp

Diagnostics:
error: expected `M::S` but found `M::R`
  ┌─ tests/checking/typing/assign_wrong_type.move:8:9
  │
8 │         S { g } = R {f :0};
  │         ^^^^^^^

error: expected `M::S` but found `M::R`
  ┌─ tests/checking/typing/assign_wrong_type.move:9:10
  │
9 │         (S { g }, R { f }) = (R{ f: 0 }, R{ f: 1 });
  │          ^^^^^^^

error: expected `()` but found `integer`
   ┌─ tests/checking/typing/assign_wrong_type.move:17:14
   │
17 │         () = 0;
   │              ^

error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/assign_wrong_type.move:18:9
   │
18 │         (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │         ^^^^^^^^^^^^

error: expected 2 item(s), found 3
   ┌─ tests/checking/typing/assign_wrong_type.move:19:9
   │
19 │         (x, b, R{f}) = (0, false);
   │         ^^^^^^^^^^^^

error: expected `bool` but found `integer`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:28
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                            ^

error: expected `bool` but found `integer`
   ┌─ tests/checking/typing/assign_wrong_type.move:24:17
   │
24 │         let b = 0;
   │                 ^

error: expected `address` but found `u64`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:18
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                  ^

error: expected `M::S` but found `M::R`
   ┌─ tests/checking/typing/assign_wrong_type.move:27:22
   │
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                      ^
